# arxiv2agent

./: .gitignore  LICENSE  NOTICE.md  README.md  README.zh-CN.md  SKILL.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: audit_digests.py  audit_figure_text_gaps.py  extract_figure_content.py  migrate_corpus.py
src/arxiv2agent/: __init__.py  _tex.py  arxiv_api.py  bib.py  cli.py  core.py  denoise.py  extract.py  markers.py  schema.py  writer.py
tests/: conftest.py  corpus_lock.json  test_arxiv_api.py  test_bib.py  test_cli.py  test_corpus.py  test_denoise.py  test_e2e.py  test_extract.py  test_figure_visual_extraction.py  test_markers.py  test_tex.py  test_writer.py
tests/golden/: 1512.03385.json  1706.03762.json  1810.04805.json  2005.14165.json  2203.02155.json  2305.13860.json
